首页和发现

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
 
     <string name="about_version">v%s</string>
 
-    <string name="car_total_money">合计:%s</string>
+    <string name="car_total_money">合计:￥%s</string>
+
+    <string name="label_money">￥%s</string>
 </resources>
